Fix to text overflow issue on profile groupings

--- a/app/src/css/foundry.less
+++ b/app/src/css/foundry.less
@@ -416,6 +416,9 @@ opacity: 1;
 	border-bottom: 1px solid #eee;
 	box-sizing: border-box;
 	cursor: pointer;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 .bubble-list-item:last-child {
